<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="20dp" 
    android:background="#FFFFFF"
    android:gravity="center">

    <View android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1"/>

    <EditText android:id="@+id/registerEmailInput" 
        android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:inputType="textEmailAddress"
        android:hint="Email" />
        
    <EditText android:id="@+id/registerPasswordInput" 
        android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:inputType="textPassword"
        android:hint="@string/hint_password" 
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tvPasswordRequirements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password_rule_helper"
        android:textColor="#888888"
        android:textSize="12sp"
        android:visibility="gone" />
        
    <EditText android:id="@+id/registerConfirmPasswordInput" 
        android:layout_width="match_parent" android:layout_height="wrap_content" 
        android:inputType="textPassword"
        android:hint="@string/hint_confirm_password" 
        android:layout_marginTop="16dp"/>

    <Button android:id="@+id/createAccountButton" 
        android:layout_width="match_parent" android:layout_height="56dp" 
        android:layout_marginTop="24dp"
        android:backgroundTint="#FF7243"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/register"
        app:cornerRadius="28dp" />

    <TextView android:id="@+id/backToLoginButton" 
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:layout_marginTop="16dp"
        android:text="@string/register_back_to_login"
        android:textColor="#333333" />

    <View android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1"/>
</LinearLayout>
